@@ -1,4 +1,4 @@
-/* $Id: strutil.h,v 1.10 2004-05-31 08:33:41 btb Exp $ */
+/* $Id: strutil.h,v 1.11 2004-08-01 13:28:32 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -15,13 +15,13 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #ifndef _STRUTILS_H
 #define _STRUTILS_H
 
-#ifndef _WIN32
-#include <string.h>
-#define stricmp(a,b) strcasecmp(a,b)
-#define strnicmp(a,b,c) strncasecmp(a,b,c)
-#elif 0
-extern int stricmp(char *str1, char *str2);
-extern int strnicmp(char *str1, char *str2, int n);
+#if defined(macintosh)
+ extern int stricmp(char *str1, char *str2);
+ extern int strnicmp(char *str1, char *str2, int n);
+#elif defined(_WIN32)
+# include <string.h>
+# define stricmp(a,b) strcasecmp(a,b)
+# define strnicmp(a,b,c) strncasecmp(a,b,c)
 #endif
 
 #ifdef _WIN32_WCE
